--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
   </div>
 
   <!-- Main Script -->
-  <script type="module" src="main.js"></script>
+  <script type="module" src="js/main.js"></script>
 
 </body>
 </html>
