--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Online Chess Multiplayer</title>
   <link rel="stylesheet" href="styles.css" />
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <style>
     /* বেসিক স্টাইল, তুমি চাইলে তোমার styles.css এ রাখতে পারো */
     body {
@@ -302,6 +305,22 @@
 
   <!-- Main Script -->
   <script type="module" src="js/main.js"></script>
+<script type="module" src="js/firebase.js"></script>
+ <script type="module" src="js/game.js"></script>
+<script type="module" src="js/settings.js"></script>
+  <script type="module" src="js/moves.js"></script>
+<script type="module" src="js/toast.js"></script>
+  <script type="module" src="js/ui.js"></script>
+<script type="module" src="js/userSearch.js"></script>
+<script type="module" src="js/loading.js"></script>
+<script type="module" src="js/clock.js"></script>
+<script type="module" src="js/profile.js"></script>
+  <script type="module" src="js/player.js"></script>
+  <script type="module" src="js/sound.js"></script>
+  <script type="module" src="js/matchHistory.js"></script>
+  <script type="module" src="js/notification.js"></script>
+  
 
+  
 </body>
 </html>
