--- a/index.html
+++ b/index.html
@@ -206,6 +206,14 @@
   <script>
     // Firebase config & init here (নিজের config বসাতে হবে)
     const firebaseConfig = {
+  apiKey: "AIzaSyB-5CakD79CthsI-_vcqblOCN1sXS6U8u8",
+  authDomain: "dot-and-box-90d27.firebaseapp.com",
+  databaseURL: "https://dot-and-box-90d27-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "dot-and-box-90d27",
+  storageBucket: "dot-and-box-90d27.firebasestorage.app",
+  messagingSenderId: "913945926983",
+  appId: "1:913945926983:web:b4c00c2cffff5b6fa7c062"
+
       // তোমার Firebase config এখানে বসাও
     };
     firebase.initializeApp(firebaseConfig);
