--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     const auth = firebase.auth();
     const db = firebase.database();
 
-    const OWNER_EMAIL = "18272872@gmail.com";
+    const OWNER_EMAIL = "samiulhaquerafsan@gmail.com";
 
     // Elements
     const loginScreen = document.getElementById("loginScreen");
