--- a/index.html
+++ b/index.html
@@ -257,18 +257,18 @@
   </div>
   <script>
     // ===== FIREBASE CONFIGURATION =====
-    var firebaseConfig = {
-      apiKey: "AIzaSyD4-hVvefrYoGk5VmU4uR5Tj2lHn2Xz8sM",
-      authDomain: "dot-and-box-game.firebaseapp.com",
-      databaseURL: "https://dot-and-box-game-default-rtdb.firebaseio.com",
-      projectId: "dot-and-box-game",
-      storageBucket: "dot-and-box-game.appspot.com",
-      messagingSenderId: "127026956392",
-      appId: "1:127026956392:web:a2bd8cbb10be4b3a3b8cff"
-    };
+    const firebaseConfig = {
+  apiKey: "AIzaSyDWbWkOSY5IA3LQuSjW5pFD0XQOWmK8mAE",
+  authDomain: "chess-online-ac582.firebaseapp.com",
+  databaseURL: "https://chess-online-ac582-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "chess-online-ac582",
+  storageBucket: "chess-online-ac582.firebasestorage.app",
+  messagingSenderId: "804954664189",
+  appId: "1:804954664189:web:b45d833a39337ce8a6e294"
+};
     firebase.initializeApp(firebaseConfig);
-    var db = firebase.database();
-    var auth = firebase.auth();
+   const db = firebase.database();
+    const auth = firebase.auth();
 
     // ==== DOM refs ====
     const homeScreen = document.getElementById("home-screen");
