--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
     </div>
   </div>
 <script>
-var firebaseConfig = {
-  apiKey: "AIzaSyD4-hVvefrYoGk5VmU4uR5Tj2lHn2Xz8sM",
-  authDomain: "dot-and-box-game.firebaseapp.com",
-  databaseURL: "https://dot-and-box-game-default-rtdb.firebaseio.com",
-  projectId: "dot-and-box-game",
-  storageBucket: "dot-and-box-game.appspot.com",
-  messagingSenderId: "127026956392",
-  appId: "1:127026956392:web:a2bd8cbb10be4b3a3b8cff"
+const firebaseConfig = {
+  apiKey: "AIzaSyD8z3e5j9y48wJkyU89F7M19cDfxQ4P8uo",
+  authDomain: "chess-online-ebc1f.firebaseapp.com",
+  databaseURL: "https://chess-online-ebc1f-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "chess-online-ebc1f",
+  storageBucket: "chess-online-ebc1f.firebasestorage.app",
+  messagingSenderId: "825068912703",
+  appId: "1:825068912703:web:48330509c612b8b4cdf88a"
 };
 firebase.initializeApp(firebaseConfig);
-var db = firebase.database();
-var auth = firebase.auth();
+const db = firebase.database();
+const auth = firebase.auth();
 
 const homeScreen = document.getElementById("home-screen");
 const googleSignInBtn = document.getElementById("google-signin-btn");
